--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -235,13 +235,13 @@ services:
       - 465:465 # ESMTP (implicit TLS)
       - 587:587 # ESMTP (explicit TLS => STARTTLS)
       - 993:993 # IMAP4 (implicit TLS)
-      # volumes:
+      volumes:
       # - ./nginx/certs/:/tmp/dms/custom-certs/:ro
-      # - ./mail/data/:/var/mail/
-      # - ./mail/state/:/var/mail-state/
-      # - ./mail/config/:/tmp/docker-mailserver/
-      # - ./logs/mail/:/var/log/mail/
-      # - /etc/localtime:/etc/localtime:ro
+      - ./mail/data/:/var/mail/
+      - ./mail/state/:/var/mail-state/
+      - ./mail/config/:/tmp/docker-mailserver/
+      - ./logs/mail/:/var/log/mail/
+      - /etc/localtime:/etc/localtime:ro
       # environment:
       # SSL_TYPE: manual
       # Values should match the file paths inside the container:
