--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-**/.env
-*.log
+# Environment specific files
+**/*.env
+**/*.log
+**/*.err
+**/*.info
+**/*.warn
+**/*.key
+**/*.crt
+
+# Deployment secrets
+**/secrets.yml
+
+# Database data
+**/pg/data/**
+**/redis/data/**
 
 # dependencies
 **/node_modules
@@ -27,9 +39,6 @@
 **/yarn-error.log*
 **/.pnpm-debug.log*
 
-# local env files
-**/.env*.local
-
 # vercel
 **/.vercel
 
@@ -38,13 +47,8 @@
 **/next-env.d.ts
 
 **/tmp
-**/pg/data/**
-**/redis/data/**
-**/.env*
 **/vendor
-**/*.key
-**/*.crt
-**/secrets.yml
 
+# Exceptions
 !.env.example
 !**/.gitkeep
