--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 **/pg/data/**
 **/redis/data/**
 
+**/mail/data/**
+**/mail/logs/**
+**/mail/state/**
+**/mail/config/**
+
 # dependencies
 **/node_modules
 **/.pnp
