--- a/nginx/certs/ssl-params.conf
+++ b/nginx/certs/ssl-params.conf
@@ -1,4 +1,4 @@
-ssl_certificate /etc/nginx/ssl/invman.nl.crt;
+ssl_certificate /etc/nginx/ssl/fullchain-invman.nl.crt;
 ssl_certificate_key /etc/nginx/ssl/invman.nl.key;
 
 ssl_protocols TLSv1.2;
