--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -48,23 +48,24 @@
     - name: Install pip docker compose
       ansible.builtin.shell: pip install docker-compose
 
+    # SSH key installed required
     - name: Get latest version of project
       git:
-        repo: "https://{{ git_user }}:{{ git_token }}@github.com/freekieb7/imans.git"
+        repo: "git@github.com:freekieb7/invman.git"
         dest: "{{ project_src }}"
         clone: yes
         update: yes
 
-    - name: Tear down existing services
-      community.docker.docker_compose:
-        project_src: "{{ project_src }}"
-        state: absent
-        files: docker-compose-prod.yml
+    # - name: Tear down existing services
+    #   community.docker.docker_compose:
+    #     project_src: "{{ project_src }}"
+    #     state: absent
+    #     files: docker-compose-prod.yml
 
-    - name: Create and start services
-      community.docker.docker_compose:
-        project_src: "{{ project_src }}"
-        remove_orphans: yes
-        build: yes
-        files: docker-compose-prod.yml
-      register: output
+    # - name: Create and start services
+    #   community.docker.docker_compose:
+    #     project_src: "{{ project_src }}"
+    #     remove_orphans: yes
+    #     build: yes
+    #     files: docker-compose-prod.yml
+    #   register: output
