--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80;
 
-    server_name ${DOMAIN};
+    server_name invman.nl;
 
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/acme;
