--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -5,6 +5,7 @@ server {
     server_name invman.nl;
 
     location /.well-known/acme-challenge/ {
+        autoindex on;
         root /usr/share/nginx/acme;
     }
 
