--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -4,9 +4,10 @@ server {
 
     server_name invman.nl;
 
-    location /.well-known/acme-challenge/ {
-        autoindex on;
-        root /usr/share/nginx/acme;
+    location ^~ /.well-known/acme-challenge/ {
+      default_type "text/plain";
+      rewrite /.well-known/acme-challenge/(.*) /$1 break;
+      root /var/www/letsencrypt;
     }
 
     location /nginx_status {
