--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,7 +9,7 @@ services:
     restart: always
     volumes:
       - ./logs/nginx:/var/log/nginx/
-      - ./nginx/letsencrypt/:/var/www/letsencrypt/
+      - ./nginx/letsencrypt:/var/www/letsencrypt/
     ports:
       - 80:80 # HTTP
       - 443:443 # HTTPS
