--- a/nginx/ssl-params.conf
+++ b/nginx/ssl-params.conf
@@ -1,4 +1,4 @@
-ssl_certificate /etc/letsencrypt/live/invman.nl/fullchain.crt;
+ssl_certificate /etc/letsencrypt/live/invman.nl/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/invman.nl/privkey.pem;
 
 ssl_protocols TLSv1.2;
