--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./logs/nginx:/var/log/nginx/
       - ./nginx/static/:/var/www/static/
-      - /etc/letsencrypt:/etc/letsencrypt
+      - /etc/letsencrypt/:/etc/letsencrypt/
     ports:
       - 80:80 # HTTP
       - 443:443 # HTTPS
