--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -23,7 +23,7 @@ server {
 
   server_name mta-sts.invman.nl;
 
-  include ssl/ssl-params.conf;
+#  include ssl/ssl-params.conf;
 
   location ^~ /.well-known/ {
       default_type "text/plain";
