--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -6,7 +6,7 @@ server {
 
     location ^~ /.well-known/acme-challenge/ {
       default_type "text/plain";
-      root /var/www/static/.well-known;
+      root /var/www/static/.well-known/acme-challenge;
     }
 
     location /nginx_status {
@@ -15,11 +15,15 @@ server {
 
         stub_status;
     }
+
+    location / {
+        return 301 https://$host$request_uri;
+    } 
 }
 
 server {
-  listen 443 default_server;
-  listen [::]:443;
+  listen 443 ssl;
+  listen [::]:443 ssl;
 
   server_name mta-sts.invman.nl;
 
