--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -22,8 +22,10 @@ server {
 }
 
 server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
+  listen 443 ssl;
+  listen [::]:443 ssl;
+
+  http2 on;
 
   ssl_certificate /etc/letsencrypt/live/invman.nl/cert.pem;
   ssl_certificate_key /etc/letsencrypt/live/invman.nl/privkey.pem;
