--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -33,7 +33,7 @@ server {
   ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
   ssl_session_tickets off;
 
-  ssl_dhparam /etc/nginx/dhparam.pem;
+  ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
   # intermediate configuration
   ssl_protocols TLSv1.2 TLSv1.3;
