--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -46,6 +46,7 @@ services:
     volumes:
       - ./auth/app:/app
     environment:
+      EXTERNAL_HOST: http://auth.localhost
       OAUTH_CLIENT_ID: ${OAUTH_CLIENT_ID}
       OAUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
       POSTGRES_HOST: ${AUTH_POSTGRES_HOST}
