--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,10 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.3",
     "@heroicons/react": "^2.0.13",
     "@nextui-org/react": "^2.1.10",
+    "@nextui-org/use-infinite-scroll": "^2.1.1",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -19,6 +21,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "^13.4.1",
     "framer-motion": "^10.16.4",
+    "graphql": "^16.8.0",
     "next": "^13.4.1",
     "next-auth": "^4.18.6",
     "react": "^18.2.0",
