--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,8 @@
     "next": "^13.4.1",
     "next-auth": "^4.18.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.3.1",
