--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.8.0",
     "next": "^13.4.1",
     "next-auth": "^4.18.6",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1"
