--- a/api/app/pkg/gqlgen/config/gqlgen.yml
+++ b/api/app/pkg/gqlgen/config/gqlgen.yml
@@ -15,7 +15,7 @@ exec:
 # Where should any generated models go?
 model:
   filename: ../model/models_gen.go
-  package: model
+  package: gql
 
 # Where should the resolver implementations go?
 resolver:
